--- a/wp-content/themes/marchebe/templates/homepage.html.twig
+++ b/wp-content/themes/marchebe/templates/homepage.html.twig
@@ -1,12 +1,12 @@
 <main id="main-content">
-    {% include '@AcMarche/home/_hero.html.twig' %}
-    {% include '@AcMarche/home/_shortcuts.html.twig' %}
+    {% include '@AcMarche/homepage/_hero.html.twig' %}
+    {% include '@AcMarche/homepage/_shortcuts.html.twig' %}
     <section class="py-6 md:py-16 px-6 container mx-auto">
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
-            {% include '@AcMarche/home/_news.html.twig' %}
-            {% include '@AcMarche/home/_agenda.html.twig' %}
+            {% include '@AcMarche/homepage/_news.html.twig' %}
+            {% include '@AcMarche/homepage/_agenda.html.twig' %}
         </div>
     </section>
-    {% include '@AcMarche/home/_widgets.html.twig' %}
-    {% include '@AcMarche/home/_partners.html.twig' %}
+    {% include '@AcMarche/homepage/_widgets.html.twig' %}
+    {% include '@AcMarche/homepage/_partners.html.twig' %}
 </main>
