--- a/wp-content/themes/marchebe/templates/widgets/_breadcrumbs.html.twig
+++ b/wp-content/themes/marchebe/templates/widgets/_breadcrumbs.html.twig
@@ -19,8 +19,8 @@
                     <path d="M8.22 5.22a.75.75 0 0 1 1.06 0l4.25 4.25a.75.75 0 0 1 0 1.06l-4.25 4.25a.75.75 0 0 1-1.06-1.06L11.94 10 8.22 6.28a.75.75 0 0 1 0-1.06Z"
                           clip-rule="evenodd" fill-rule="evenodd"/>
                 </svg>
-                <a href="{{ item.link }}" aria-current="page"
-                   class="ml-2 sm:ml-4 text-sm font-medium text-gray-700 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-100">
+                <a href="{{ item.link }}"
+                   class="ml-2 sm:ml-4 font-medium text-gray-700 hover:text-gray-900 dark:text-gray-300 dark:hover:text-gray-100">
                     {{ item.name|raw }}
                 </a>
             </li>
@@ -31,7 +31,7 @@
                 <path d="M8.22 5.22a.75.75 0 0 1 1.06 0l4.25 4.25a.75.75 0 0 1 0 1.06l-4.25 4.25a.75.75 0 0 1-1.06-1.06L11.94 10 8.22 6.28a.75.75 0 0 1 0-1.06Z"
                       clip-rule="evenodd" fill-rule="evenodd"/>
             </svg>
-            <span class="ml-2 sm:ml-4 text-sm font-medium text-gray-900 dark:text-gray-100 truncate max-w-[150px] sm:max-w-[300px] md:max-w-none">
+            <span class="ml-2 sm:ml-4 font-medium text-gray-900 dark:text-gray-100 truncate max-w-[150px] sm:max-w-[300px] md:max-w-none">
                 {{ title|raw }}
             </span>
         </li>
