--- a/wp-content/themes/marchebe/assets/css/marchebe.css
+++ b/wp-content/themes/marchebe/assets/css/marchebe.css
@@ -383,6 +383,9 @@
   .mx-auto {
     margin-inline: auto;
   }
+  .my-2 {
+    margin-block: calc(var(--spacing) * 2);
+  }
   .my-4 {
     margin-block: calc(var(--spacing) * 4);
   }
@@ -1758,6 +1761,9 @@
   }
   .text-citoyen {
     color: var(--color-citoyen);
+  }
+  .text-cta-brown {
+    color: var(--color-cta-brown);
   }
   .text-cta-dark {
     color: var(--color-cta-dark);
