--- a/wp-content/themes/marchebe/templates/category/_header.html.twig
+++ b/wp-content/themes/marchebe/templates/category/_header.html.twig
@@ -2,7 +2,7 @@
     <header class="container mx-auto  text-center mt-3 animate-fade-in-up my-4"
             style="animation: fade-in-up 1s ease-out forwards;">
         {% include '@AcMarche/widgets/_breadcrumbs.html.twig' %}
-        <h1 class="text-2xl md:text-4xl font-bold  text-cta-dark">{{ category.name|raw }}</h1>
+        <h1 class="text-2xl md:text-4xl font-bold text-citoyen my-2">{{ category.name|raw }}</h1>
         <!--
         <p class="mt-4 text-lg md:text-xl max-w-3xl mx-auto">
         {{ description }}
