--- a/wp-content/themes/marchebe/templates/homepage/_widgets.html.twig
+++ b/wp-content/themes/marchebe/templates/homepage/_widgets.html.twig
@@ -1,6 +1,6 @@
 <section class="bg-blue-50 py-12">
     <div class="container mx-auto px-4 md:px-6 -mt-8 relative z-20">
-        <div class="grid grid-cols-3 lg:grid-cols-[repeat(3,minmax(0,300px))] gap-2 lg:gap-4 justify-center align-center">
+        <div class="grid grid-cols-3 lg:grid-cols-[repeat(3,minmax(0,300px))] gap-2 lg:gap-4 justify-center align-center" id="widgets">
             {% for item in widgets %}
                 <a
                         href="{{ item.url }}"
