--- a/wp-content/themes/marchebe/templates/article/_see_also.html.twig
+++ b/wp-content/themes/marchebe/templates/article/_see_also.html.twig
@@ -8,7 +8,7 @@
                    class="group block bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition-shadow duration-300">
                     <img class="h-48 w-full object-cover"
                          src="{% if event.images|length > 0 %} {{ event.images[0] }} {% else %} 'https://pivotmedia.tourismewallonie.be/OTH-A0-00UE-0HH1/OTH-A0-00UE-0HH1.jpg' {% endif %}"
-                         alt="Article thumbnail">
+                         alt="{{ event.nom|slug }}">
                     <div class="p-6">
                         <p class="text-sm text-gray-500 mb-1">
                             {{ event.shortCutDateEvent["day"] }} {{ event.shortCutDateEvent["month"] }} {{ event.shortCutDateEvent["year"] }}
