--- a/wp-content/themes/marchebe/templates/search.html.twig
+++ b/wp-content/themes/marchebe/templates/search.html.twig
@@ -24,7 +24,7 @@
                     <button
                             type="button"
                             @click="performSearch(searchQuery)"
-                            class="absolute inset-y-0 right-0 flex items-center px-4 md:px-6 bg-citoyen text-white font-semibold rounded-r-full hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 transition-colors"
+                            class="absolute inset-y-0 right-0 flex items-center px-4 md:px-6 bg-cta-brown text-white font-semibold rounded-r-full hover:bg-blue-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-blue-500 transition-colors"
                     >
                         <!-- Mobile: Icon only -->
                         <span class="md:hidden"><i class="fas fa-search text-white"></i></span>
