--- a/wp-content/themes/marchebe/templates/news/index.html.twig
+++ b/wp-content/themes/marchebe/templates/news/index.html.twig
@@ -1,26 +1,30 @@
-<section class="bg-slate-50">
+<div class="bg-slate-50 ">
+    <!-- HERO HEADER SECTION -->
     {% include '@AcMarche/article/_header.html.twig' %}
-    <div class="container mx-auto mb-2 px-4 sm:px-6 lg:px-8">
-        {% include '@AcMarche/widgets/_breadcrumbs.html.twig' %}
-        <h2 class="text-3xl font-bold text-center mb-10">{{ title }}</h2>
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
-            <!-- Related Article Card 1 -->
-            {% for item in news %}
-                <a
-                        class="group block bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition-shadow duration-300"
-                        href="{{ item.link }}"
-                >
-                    <img class="h-48 w-full object-cover"
-                         src="{{ item.post_thumbnail_url }}"
-                         alt="Article thumbnail">
-                    <div class="p-6">
-                        <p class="`text-sm mb-1 {{ item.colorTailwind }}">{{ item.blog }}</p>
-                        <h4 class="font-bold text-lg text-gray-900 group-hover:text-cta-dark transition-colors">
-                            {{ item.post_title }}
-                        </h4>
-                    </div>
-                </a>
-            {% endfor %}
-        </div>
-    </div>
-</section>
+    <!-- MAIN CONTENT SECTION -->
+    <main id="main-content" class="relative z-20 -mt-16 md:-mt-24">
+        <article class="md:max-w-7xl mx-auto bg-white rounded-xl shadow-2xl p-6 sm:p-10 md:p-12 mb-3">
+            {% include '@AcMarche/widgets/_breadcrumbs.html.twig' %}
+            {% include '@AcMarche/article/_title.html.twig' %}
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
+                <!-- Related Article Card 1 -->
+                {% for item in news %}
+                    <a
+                            class="group block bg-white rounded-lg shadow-md overflow-hidden hover:shadow-xl transition-shadow duration-300"
+                            href="{{ item.link }}"
+                    >
+                        <img class="h-48 w-full object-cover"
+                             src="{{ item.post_thumbnail_url }}"
+                             alt="Article thumbnail">
+                        <div class="p-6">
+                            <h4 class="font-bold text-lg text-gray-900 group-hover:text-cta-dark transition-colors">
+                                {{ item.post_title }}
+                            </h4>
+                        </div>
+                    </a>
+                {% endfor %}
+            </div>
+            {% include '@AcMarche/article/_tags.html.twig' %}
+        </article>
+    </main>
+</div>
