--- a/wp-content/themes/marchebe/templates/_footer.html.twig
+++ b/wp-content/themes/marchebe/templates/_footer.html.twig
@@ -15,7 +15,7 @@
                             Services Communaux</a>
                     </li>
                     <li><a href="https://visitmarche.be" class="hover:text-blue-400 transition-colors">Tourisme</a></li>
-                    <li><a href="/agenda" class="hover:text-blue-400 transition-colors">Agenda</a></li>
+                    <li><a href="/tourisme/agenda-des-manifestations" class="hover:text-blue-400 transition-colors">Agenda des manifestations</a></li>
                     <li><a href="https://eguichet.marche.be" class="hover:text-blue-400 transition-colors">
                             Démarches en ligne</a>
                     </li>
