--- a/wp-content/themes/marchebe/templates/agenda/_dates.html.twig
+++ b/wp-content/themes/marchebe/templates/agenda/_dates.html.twig
@@ -3,48 +3,48 @@
 </h3>
 <div class="flex flex-col gap-2 mb-2">
     {% for dateEvent in event.dates %}
-        <div class="font-montserrat-semi-bold text-cta-dark">
-
-            {% if dateEvent.dateBegin %}
-                {{ dateEvent.dateBegin.date|format_date('full') }}
-            {% endif %}
-
-            {% if dateEvent.dateRealBegin %}
-                Du {{ dateEvent.dateRealBegin.date|format_date('full') }}
-            {% endif %}
-
-            {% if dateEvent.dateEnd %}
-                au {{ dateEvent.dateEnd.date|format_date('full') }}
-            {% endif %}
-
-            <div class="flex flex-col gap-1 my-4">
-
-                {% if dateEvent.dateRange %}
-                    <span>{{ dateEvent.dateRange }}</span>
+        <ul class="font-montserrat-semi-bold text-cta-dark flex flex-row gap-2">
+            <li>
+                {% if dateEvent.dateBegin %}
+                    {{ dateEvent.dateBegin.date|format_date('full') }}
                 {% endif %}
 
-                {% if dateEvent.ouvertureHeure1 %}
-                    <span>{{ dateEvent.ouvertureHeure1 }}</span>
+                {% if dateEvent.dateRealBegin %}
+                    Du {{ dateEvent.dateRealBegin.date|format_date('full') }}
                 {% endif %}
 
-                {% if dateEvent.fermetureHeure1 %}
-                    <span>{{ dateEvent.fermetureHeure1 }}</span>
+                {% if dateEvent.dateEnd %}
+                    au {{ dateEvent.dateEnd.date|format_date('full') }}
                 {% endif %}
 
-                {% if dateEvent.ouvertureHeure2 %}
-                    <span>{{ dateEvent.ouvertureHeure2 }}</span>
-                {% endif %}
+                <div class="flex flex-col gap-1 my-4">
 
-                {% if dateEvent.fermetureHeure2 %}
-                    <span>{{ dateEvent.fermetureHeure2 }}</span>
-                {% endif %}
+                    {% if dateEvent.dateRange %}
+                        <span>{{ dateEvent.dateRange }}</span>
+                    {% endif %}
 
-                {% if dateEvent.ouvertureDetails %}
-                    <span>{{ dateEvent.ouvertureDetails|raw }}</span>
-                {% endif %}
+                    {% if dateEvent.ouvertureHeure1 %}
+                        <span>{{ dateEvent.ouvertureHeure1 }}</span>
+                    {% endif %}
 
-            </div>
+                    {% if dateEvent.fermetureHeure1 %}
+                        <span>{{ dateEvent.fermetureHeure1 }}</span>
+                    {% endif %}
 
-        </div>
+                    {% if dateEvent.ouvertureHeure2 %}
+                        <span>{{ dateEvent.ouvertureHeure2 }}</span>
+                    {% endif %}
+
+                    {% if dateEvent.fermetureHeure2 %}
+                        <span>{{ dateEvent.fermetureHeure2 }}</span>
+                    {% endif %}
+
+                    {% if dateEvent.ouvertureDetails %}
+                        <span>{{ dateEvent.ouvertureDetails|raw }}</span>
+                    {% endif %}
+
+                </div>
+            </li>
+        </ul>
     {% endfor %}
 </div>
