--- a/wp-content/themes/marchebe/templates/agenda/_dates.html.twig
+++ b/wp-content/themes/marchebe/templates/agenda/_dates.html.twig
@@ -17,7 +17,7 @@
                     {% endif %}
                 {% endif %}
 
-                <span class="flex flex-col gap-1 my-4">
+                <span class="flex flex-col gap-1">
 
                     {% if dateEvent.ouvertureHeure1 %}
                         <span>{{ dateEvent.ouvertureHeure1 }}</span>
