--- a/wp-content/themes/marchebe/templates/agenda/_dates.html.twig
+++ b/wp-content/themes/marchebe/templates/agenda/_dates.html.twig
@@ -1,13 +1,13 @@
 <h3 class="font-montserrat-semi-bold text-cta-light text-md border-bottom">
     Dates
 </h3>
-<div class="flex flex-col gap-2 mb-2">
+<div class="flex flex-col">
     {% for dateEvent in event.dates %}
         <ul class="font-montserrat-semi-bold text-cta-dark flex flex-col gap-2">
             <li class="flex flex-row gap-2">
                 {% if dateEvent.isSameDate() %}
                     {% if dateEvent.dateBegin %}
-                    <span>     {{ dateEvent.dateBegin.date|format_date('full') }}</span>
+                        <span>     {{ dateEvent.dateBegin.date|format_date('full') }}</span>
                     {% endif %}
                 {% else %}
                     {% if dateEvent.dateRange %}
@@ -17,29 +17,26 @@
                     {% endif %}
                 {% endif %}
 
-                <span class="flex flex-col gap-1">
+                {% if dateEvent.ouvertureHeure1 %}
+                    <span>{{ dateEvent.ouvertureHeure1 }}</span>
+                {% endif %}
 
-                    {% if dateEvent.ouvertureHeure1 %}
-                        <span>{{ dateEvent.ouvertureHeure1 }}</span>
-                    {% endif %}
+                {% if dateEvent.fermetureHeure1 %}
+                    <span>{{ dateEvent.fermetureHeure1 }}</span>
+                {% endif %}
 
-                    {% if dateEvent.fermetureHeure1 %}
-                        <span>{{ dateEvent.fermetureHeure1 }}</span>
-                    {% endif %}
+                {% if dateEvent.ouvertureHeure2 %}
+                    <span>{{ dateEvent.ouvertureHeure2 }}</span>
+                {% endif %}
 
-                    {% if dateEvent.ouvertureHeure2 %}
-                        <span>{{ dateEvent.ouvertureHeure2 }}</span>
-                    {% endif %}
+                {% if dateEvent.fermetureHeure2 %}
+                    <span>{{ dateEvent.fermetureHeure2 }}</span>
+                {% endif %}
 
-                    {% if dateEvent.fermetureHeure2 %}
-                        <span>{{ dateEvent.fermetureHeure2 }}</span>
-                    {% endif %}
+                {% if dateEvent.ouvertureDetails %}
+                    <span>{{ dateEvent.ouvertureDetails|raw }}</span>
+                {% endif %}
 
-                    {% if dateEvent.ouvertureDetails %}
-                        <span>{{ dateEvent.ouvertureDetails|raw }}</span>
-                    {% endif %}
-
-                </span>
             </li>
         </ul>
     {% endfor %}
