--- a/wp-content/themes/marchebe/templates/agenda/_dates.html.twig
+++ b/wp-content/themes/marchebe/templates/agenda/_dates.html.twig
@@ -1,7 +1,7 @@
 <h3 class="font-montserrat-semi-bold text-cta-light text-md">
     Dates
 </h3>
-<ul class="font-montserrat-semi-bold text-cta-dark flex flex-col gap-2">
+<ul class="font-montserrat-semi-bold text-cta-dark flex flex-col gap-2 not-prose">
     {% for dateEvent in event.dates %}
         <li class="flex flex-row gap-2">
             {% if dateEvent.isSameDate() %}
