--- a/wp-content/themes/marchebe/templates/agenda/show.html.twig
+++ b/wp-content/themes/marchebe/templates/agenda/show.html.twig
@@ -3,6 +3,7 @@
         {% include '@AcMarche/article/_header.html.twig' %}
         <div class="relative z-20 -mt-16 md:-mt-24">
             <article class="w-full md:max-w-6xl mx-auto bg-white rounded-xl shadow-2xl p-2 sm:p-10 md:p-12">
+                {% include '@AcMarche/widgets/_breadcrumbs.html.twig' %}
                 {% include '@AcMarche/article/_title.html.twig' %}
                 <div class="prose max-w-none prose-lg prose-slate prose-a:text-blue-600 hover:prose-a:text-blue-800">
                     {% if event.description %}
