--- a/wp-content/themes/marchebe/templates/homepage.html.twig
+++ b/wp-content/themes/marchebe/templates/homepage.html.twig
@@ -1,7 +1,7 @@
 <main id="main-content">
     {% include '@AcMarche/homepage/_hero.html.twig' %}
     {% include '@AcMarche/homepage/_shortcuts.html.twig' %}
-    <section class="py-6 md:py-16 px-6 container mx-auto">
+    <section class="py-6 md:py-16 px-4 md:px-6 container mx-auto">
         <div class="grid grid-cols-1 lg:grid-cols-2 gap-12">
             {% include '@AcMarche/homepage/_news.html.twig' %}
             {% include '@AcMarche/homepage/_agenda.html.twig' %}
