--- a/wp-content/themes/marchebe/templates/homepage/_news.html.twig
+++ b/wp-content/themes/marchebe/templates/homepage/_news.html.twig
@@ -1,10 +1,10 @@
 <section>
     <h3 class="text-2xl md:text-3xl font-bold mb-6">Actualités</h3>
     <div class="space-y-6">
-        <div class="grid md:grid-cols-2 gap-8">
+        <div class="grid md:grid-cols-2 gap-4 md:gap-8">
             {% for item in news %}
                 <a
-                        class="{% if loop.index > 2 %}hidden md:block{% endif %}  bg-white shadow rounded-lg overflow-hidden  hover:shadow-2xl hover:-translate-y-2 transition-all duration-300"
+                        class="{% if loop.index > 3 %}hidden md:block{% endif %}  bg-white shadow rounded-lg overflow-hidden  hover:shadow-2xl hover:-translate-y-2 transition-all duration-300"
                         href="{{ item.link }}"
                 >
                     <img
