--- a/wp-content/themes/marchebe/templates/widgets/_breadcrumbs.html.twig
+++ b/wp-content/themes/marchebe/templates/widgets/_breadcrumbs.html.twig
@@ -1,6 +1,6 @@
 <!-- https://tailwindui.com/components/application-ui/navigation/breadcrumbs -->
 <nav aria-label="Breadcrumb" class="w-full overflow-x-auto">
-    <ol role="list" class="flex flex-wrap items-center gap-2 sm:gap-4">
+    <ol role="list" class="flex flex-wrap items-center gap-2">
         <li>
             <a href="/"
                class="text-gray-700 hover:text-gray-900 inline-flex items-center">
@@ -25,7 +25,7 @@
                 </a>
             </li>
         {% endfor %}
-        <li aria-current="page" class="flex items-center">
+        <li aria-current="page" class="hidden md:flex items-center ">
             <svg viewBox="0 0 20 20" fill="currentColor" data-slot="icon" aria-hidden="true"
                  class="size-5 shrink-0 text-gray-400">
                 <path d="M8.22 5.22a.75.75 0 0 1 1.06 0l4.25 4.25a.75.75 0 0 1 0 1.06l-4.25 4.25a.75.75 0 0 1-1.06-1.06L11.94 10 8.22 6.28a.75.75 0 0 1 0-1.06Z"
