--- a/wp-content/themes/marchebe/templates/article/_tags.html.twig
+++ b/wp-content/themes/marchebe/templates/article/_tags.html.twig
@@ -1,8 +1,8 @@
-<div class="flex flex-row gap-2 mt-6">
+<div class="flex flex-row flex-wrap gap-2 mt-6">
     {% for tag in tags %}
         <a
                 href="{{ tag.url }}"
-                class="inline-block bg-blue-100 text-blue-800 text-xs font-semibold px-3 py-1 rounded-full uppercase tracking-wider hover:bg-blue-200 transition-colors">
+                class="inline-block bg-blue-100 text-cta-brown text-xs font-semibold px-3 py-1 rounded-full uppercase  hover:bg-blue-200 transition-colors">
             {{ tag.name }}
         </a>
     {% endfor %}
