--- a/wp-content/themes/marchebe/templates/article/show.html.twig
+++ b/wp-content/themes/marchebe/templates/article/show.html.twig
@@ -3,7 +3,7 @@
     {% include '@AcMarche/article/_header.html.twig' %}
     <!-- MAIN CONTENT SECTION -->
     <main id="main-content" class="relative z-20 -mt-16 md:-mt-24">
-        <article class="max-w-3444xl md:max-w-5xl mx-auto bg-white rounded-xl shadow-2xl p-6 sm:p-10 md:p-12 mb-3">
+        <article class="md:max-w-5xl mx-auto bg-white rounded-xl shadow-2xl p-4 md:p-10 mb-3">
             {% include '@AcMarche/widgets/_breadcrumbs.html.twig' %}
             {% include '@AcMarche/article/_title.html.twig' %}
             {% include '@AcMarche/article/_share_and_listen.html.twig' %}
