--- a/wp-content/themes/marchebe/templates/bottin/_contact.html.twig
+++ b/wp-content/themes/marchebe/templates/bottin/_contact.html.twig
@@ -64,7 +64,7 @@
                 </svg>
             </div>
             <div class="ml-4">
-                <a :href="fiche.website" target="_blank" rel="noopener noreferrer"
+                <a href="{{ fiche.website }}" target="_blank" rel="noopener noreferrer"
                    class="text-gray-700 dark:text-gray-300 hover:text-teal-600 dark:hover:text-teal-400 transition-colors duration-200 break-all">
                     {{ fiche.website }}
                 </a>
