--- a/wp-content/themes/marchebe/templates/bottin/_address.html.twig
+++ b/wp-content/themes/marchebe/templates/bottin/_address.html.twig
@@ -1,6 +1,6 @@
 <h3>Adresse</h3>
 <div
-        class="flex items-center group">
+        class="flex items-center group not-prose">
     <div class="flex-shrink-0 w-6 h-6">
         <svg class="w-6 h-6 text-gray-400 dark:text-gray-500 group-hover:text-teal-500 transition-colors duration-200"
              fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
@@ -11,17 +11,17 @@
         </svg>
     </div>
     <div class="ml-4 flex flex-col">
-            <p class="text-gray-700 dark:text-gray-300">
-                {{ fiche.rue }} {{ fiche.numero }}<br/>
-                {{ fiche.cp }} {{ fiche.localite }}
-            </p>
-            <a
-                    href="{{ ficheUrlMap(fiche) }}"
-                    target="_blank"
-                    rel="noopener noreferrer"
-                    class="text-sm text-teal-600 dark:text-teal-400 hover:text-teal-500 font-medium transition-colors duration-200"
-            >
-                Visualiser sur une carte →
-            </a>
+        <p class="text-gray-700 dark:text-gray-300">
+            {{ fiche.rue }} {{ fiche.numero }}<br/>
+            {{ fiche.cp }} {{ fiche.localite }}
+        </p>
+        <a
+                href="{{ ficheUrlMap(fiche) }}"
+                target="_blank"
+                rel="noopener noreferrer"
+                class="text-sm text-teal-600 dark:text-teal-400 hover:text-teal-500 font-medium transition-colors duration-200"
+        >
+            Visualiser sur une carte →
+        </a>
     </div>
 </div>
