--- a/wp-content/themes/marchebe/templates/agenda/_dates.html.twig
+++ b/wp-content/themes/marchebe/templates/agenda/_dates.html.twig
@@ -1,5 +1,5 @@
 <h3 class="font-montserrat-semi-bold text-cta-light text-md">
-    Dates
+    Quand ?
 </h3>
 <ul class="font-montserrat-semi-bold text-cta-dark flex flex-col gap-2 not-prose">
     {% for dateEvent in event.dates %}
