--- a/wp-content/themes/marchebe/templates/_header.html.twig
+++ b/wp-content/themes/marchebe/templates/_header.html.twig
@@ -72,7 +72,7 @@
         Aller au contenu principal
     </a>
 
-    <header class="bg-white shadow-md relative z-40" id="main-header">
+    <header class="bg-white shadow-md relative z-40 fixed" id="main-header">
         <div class="container mx-auto px-4">
             <div class="flex items-center justify-between h-16">
                 <a href="/" class="">
