--- a/wp-content/themes/marchebe/templates/agenda/index.html.twig
+++ b/wp-content/themes/marchebe/templates/agenda/index.html.twig
@@ -1,4 +1,4 @@
-<section class="min-h-screen">
+<section class="min-h-screen pt-16">
     <header
             class="relative h-[40vh] md:h-[60vh] md:min-h-[400px] bg-cover bg-center bg-cta-dark text-white flex items-center"
             style="background-image: url('https://www.visitmarche.be/wp-content/uploads/2021/02/bg_events.png');">
