--- a/wp-content/themes/marchebe/templates/index.html.twig
+++ b/wp-content/themes/marchebe/templates/index.html.twig
@@ -1,4 +1,4 @@
-<div class="bg-slate-50 ">
+<div class="bg-slate-50 pt-16">
     {% include '@AcMarche/article/_header.html.twig' %}
     <div class="relative z-20 -mt-16 md:-mt-24">
         <article class="w-full md:max-w-6xl mx-auto bg-white rounded-xl shadow-2xl p-2 sm:p-10 md:p-12">
