--- a/wp-content/themes/marchebe/templates/homepage.html.twig
+++ b/wp-content/themes/marchebe/templates/homepage.html.twig
@@ -1,4 +1,4 @@
-<main id="main-content">
+<main id="main-content" class="pt-16">
     {% include '@AcMarche/homepage/_hero.html.twig' %}
     {% include '@AcMarche/homepage/_shortcuts.html.twig' %}
     <section class="py-6 md:py-16 px-4 md:px-6 container mx-auto">
