--- a/wp-content/themes/marchebe/templates/news/index.html.twig
+++ b/wp-content/themes/marchebe/templates/news/index.html.twig
@@ -1,4 +1,4 @@
-<div class="bg-slate-50 ">
+<div class="bg-slate-50 pt-16">
     <!-- HERO HEADER SECTION -->
     {% include '@AcMarche/article/_header.html.twig' %}
     <!-- MAIN CONTENT SECTION -->
