--- a/wp-content/themes/marchebe/templates/homepage/_hero.html.twig
+++ b/wp-content/themes/marchebe/templates/homepage/_hero.html.twig
@@ -1,5 +1,5 @@
 <!-- Hero Section -->
-<section class="relative h-[20vh] bg-blue-50 flex items-center justify-center text-cta-dark">
+<section class="relative h-[20vh] bg-blue-50 flex items-center justify-center text-cta-dark pt-2">
     <!-- Hero Content -->
     <div class="relative z-10 text-center px-4">
         <h1 class="text-2xl md:text-6xl font-extrabold tracking-tight flex flex-col md:flex-row gap-2">
