--- a/wp-content/themes/marchebe/templates/category/_header.html.twig
+++ b/wp-content/themes/marchebe/templates/category/_header.html.twig
@@ -1,13 +1,10 @@
-<section class="relative  bg-blue-50 text-black flex flex-col">
-    <header class="container mx-auto  text-center mt-3 animate-fade-in-up my-4"
-            style="animation: fade-in-up 1s ease-out forwards;">
-        {% include '@AcMarche/widgets/_breadcrumbs.html.twig' %}
-        <h1 class="text-2xl md:text-4xl font-bold text-citoyen my-2">{{ category.name|raw }}</h1>
-        <!--
+<header class="  text-center mt-3 animate-fade-in-up my-4"
+        style="animation: fade-in-up 1s ease-out forwards;">
+    <h1 class="text-2xl md:text-4xl font-bold text-citoyen my-2">{{ category.name|raw }}</h1>
+    <!--
         <p class="mt-4 text-lg md:text-xl max-w-3xl mx-auto">
         {{ description }}
         </p>
         -->
-    </header>
-    {% include '@AcMarche/category/_menu.html.twig' %}
-</section>
+</header>
+{% include '@AcMarche/category/_menu.html.twig' %}
